# brain-sdk

./: CMakeLists.txt  README.md
docs/: AUDIO_CV_IN.md  AUDIO_CV_OUT.md  BUTTON.md  LED.md  LEDS.md  MIDI_PARSER.md  MIDI_TO_CV.md  POTS.md  PULSE.md  SETUP.md  UTILITIES.md
lib/brain-common/: CMakeLists.txt  brain-common.h  brain-gpio-setup.h  ringbuffer.cpp
lib/brain-common/include/brain-common/: ringbuffer.h
lib/brain-io/: CMakeLists.txt  audio-cv-in.cpp  audio-cv-out.cpp  midi-parser.cpp  pulse.cpp
lib/brain-io/include/brain-io/: audio-cv-in.h  audio-cv-out.h  midi-parser.h  pulse.h
lib/brain-ui/: CMakeLists.txt  button.cpp  led.cpp  leds.cpp  pot-multiplexer.cpp  pots.cpp
lib/brain-ui/include/brain-ui/: button.h  led.h  leds.h  pot-multiplexer.h  pots.h
lib/brain-utils/: CMakeLists.txt  midi-to-cv.cpp  ringbuffer.cpp
lib/brain-utils/include/brain-utils/: helpers.h  midi-to-cv.h  ringbuffer.h
lib/tools/: CMakeLists.txt  midi-to-cv.cpp
lib/tools/include/tools/: midi-to-cv.h
scripts/: new-brain-app.sh
sdk_test/: CMakeLists.txt  main.cpp
